# dinosaur

./: IO.py  LICENSE  MANIFEST.in  README.md  controller.py  data.py  entity.py  main.py  math_helper.py  metrics.py  network.py  setup.cfg
game/: controller.py  entity.py
neat/: metrics.py  network.py
src/: main.py
src/dinosaur/: main.py
src/dinosaur/game/: controller.py  entity.py  resources.py
src/dinosaur/neat/: metrics.py  network.py
src/dinosaur/utils/: math_helper.py
src/game/: controller.py  entity.py
src/neat/: metrics.py  network.py
src/utils/: data.py  math_helper.py
