[metadata]
name = dinosaur-lmautner
version = 0.0.5
author = Lukas Mautner
author_email = lukas.mautner98@gmail.com
description = NEAT implementation of the Google Chrome dinosaur game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukDev/dinosaur
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src